--- a/elevtabell.html
+++ b/elevtabell.html
@@ -8,7 +8,7 @@
         <nav class="snarveg">
             <a href="index.html">Heimeside</a>
             <a href="elevtabell.html">Elevside</a>
-            <a href="introfilm.html">Introduksjonsfilm</a>
+            <a href="introduksjonsfilmferdig.mp4">Introduksjonsfilm</a>
         </nav>
     <h1 class="tittel">Elever IT klassen Voss Gymnas</h1>
     
