--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <br>
             <a href="elevtabell.html">Elever på Voss Gymnas</a>
             <br>
-            <a href="introfilm.html">Introduksjonsfilm</a>
+            <a href="introduksjonsfilmferdig.mp4">Introduksjonsfilm</a>
             
         
         </nav>
