--- a/elevtabell.html
+++ b/elevtabell.html
@@ -46,11 +46,12 @@
   
     <style>
         img{
-           width:150px;
-            height:150px;
+           width:100px;
+            height:100px;
             margin-right:50px;
             margin-left:50px;
             border:solid 2px lightblue;
+            border-radius:50px;
 
             
             
